@@ -1,6 +1,7 @@
 v0.0.22-alpha
 Micro-framework
     - Optimize imports
+    - Update table file
 
 v0.0.21-alpha
 Micro-framework
